# automator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/accounts/: admin.py  context_processors.py  fields.py  forms.py  models.py  onboarding.py  settings_views.py  urls.py  utils.py  views.py
apps/automation/: rules.py  triggers.py  workflows.py
apps/billing/: admin.py  apps.py  flutterwave.py  limits.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/bitrix/: admin.py  apps.py  auth.py  client.py  models.py  sdk.py  tasks.py  tenant_urls.py  tenant_views.py  urls.py  views.py
apps/core/: context_processors.py  help.py  models.py  urls.py  utils.py  views.py
apps/email/: admin.py  apps.py  audit.py  dnscheck.py  exceptions.py  iredmail.py  mailcow.py  models.py  progstack.py  services.py  tasks.py  types.py  urls.py  views.py
apps/whatsapp/: admin.py  embedded.py  models.py  numbers.py  tasks.py  urls.py  views.py
assets/: app.css
automator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/: entrypoint.sh
nginx/conf.d/: default.conf
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/accounts/: accept_invitation.html  dashboard.html  invite_email.txt  invite_email_subject.txt  landing.html  onboarding.html  settings_base.html  settings_profile.html  settings_security.html  settings_team.html  signup.html
templates/auth/: login.html
templates/billing/: _plan_fields.html  plans.html
templates/bitrix/: tenants.html
templates/components/: _capability.html  _nav.html  brand_mark.html  confirm.html  copy_field.html  empty_state.html  form_field.html  help_link.html  help_tip.html  icon.html  onboarding_widget.html  stat_card.html  toast.html  welcome_tour.html
templates/core/: customers.html  settings.html
templates/email/: _alias_row.html  (+5 more)
(+56 files in other folders)
