[project]
name = "automator"
version = "0.1.0"
description = "WhatsApp - Bitrix automation engine"
authors = [
    {name = "Mwapsam",email = "mwapsam@gmail.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "cryptography (>=48.0.1,<49.0.0)",
    "phonenumbers (>=9.0.32,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "celery[redis] (>=5.4,<6.0)",
    "redis (>=5.0,<6.0)",
    "requests (>=2.31,<3.0)",
    "b24pysdk[django] (>=1.1.4,<2.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
